live-build (4.0.3-1kali2) kali-dev; urgency=medium

  [ Sophie Brun ]
  * Update EFI patch.
  * Fix binary_syslinux to properly detect the presence of the bootloader.

  [ Raphaël Hertzog ]
  * Improve package list parsing code in multiple ways:
    - fix the #if conditionals
    - accept comments in those files
    - do not fail on empty package lists

 -- Sophie Brun <sophie@freexian.com>  Tue, 02 Dec 2014 15:56:49 +0100

live-build (4.0.3-1kali1) kali-dev; urgency=medium

  * Import new debian version
  * Drop patches add-xfsprogs-jfsutils-to-d-i and 
    fix-kernel-metapackages-used-in-di-step as it's already in debian version.
  * Add a link to kali-rolling

 -- Sophie Brun <sophie@freexian.com>  Thu, 27 Nov 2014 16:00:47 +0100

live-build (4.0.3-1) unstable; urgency=low

  [ Richard Nelson ]
  * Adding cinnamon-desktop to frontend/cgi.

  [ Daniel Baumann ]
  * Updating to standards version 3.9.6.

  [ Richard Nelson ]
  * Correct variable name for apt_indices and adjust sed order for
    population of build feedback on frontend/cgi.

 -- Daniel Baumann <mail@daniel-baumann.ch>  Sat, 25 Oct 2014 14:39:03 +0200

live-build (4.0.2-1) unstable; urgency=low

  [ Daniel Baumann ]
  * Creating live.list.chroot with live packages in config.

  [ victory ]
  * Fix typos in lb_config.1.
  * Add Japanese translations.

  [ Daniel Baumann ]
  * Making populating of live.chroot.list distribution specific.
  * Making check target in manpages makefile comply with the rest.
  * Dropping incomplete German manpage translations.
  * Dropping syslinux 6 symlinks from bootloader configs for wheezy.
  * Removing source_includes from toplevel source script, it was a python
    stub and will come back at a later point.

 -- Daniel Baumann <mail@daniel-baumann.ch>  Fri, 12 Sep 2014 13:42:37 +0200

live-build (4.0.1-1) unstable; urgency=low

  * Dropping leftover testroot call in bootstrap_cdebootstrap and
    bootstrap_debootstrap.
