@@ -2,25 +2,33 @@ From: =?utf-8?q?Rapha=C3=ABl_Hertzog?= <hertzog@debian.org>
 Date: Fri, 5 Dec 2014 09:36:27 +0100
 Subject: Update linux flavours for armhf/armel
 
-With 3.12+ kernels, on armhf, only armmp / armmp-lpae flavours are
-available. With Linux 3.14, armel lost the support of the iop32x and
-ixp4xx flavors.
+With linux 3.16 of Debian Jessie, armmp and armmp-lpae are the
+only armhf flavours availale. On armel, we lost the support of
+the iop32x flavors.
 
-Kali has linux 3.14 (or newer) and needs to adapt to this.
+Linux 3.14 used in Kali doesn't build the ixp4xx flavor, so keep that
+one disabled too.
 ---
  functions/defaults.sh | 6 +++---
  1 file changed, 3 insertions(+), 3 deletions(-)
 
 diff --git a/functions/defaults.sh b/functions/defaults.sh
-index feebdee..715869c 100755
+index feebdee..0d5fa4f 100755
 --- a/functions/defaults.sh
 +++ b/functions/defaults.sh
-@@ -525,15 +525,15 @@ Set_defaults ()
+@@ -525,15 +525,29 @@ Set_defaults ()
  				*)
  					# armel will have special images: one rootfs image and many additional kernel images.
  					# therefore we default to all available armel flavours
 -					LB_LINUX_FLAVOURS="${LB_LINUX_FLAVOURS:-iop32x ixp4xx kirkwood orion5x versatile}"
-+					LB_LINUX_FLAVOURS="${LB_LINUX_FLAVOURS:-kirkwood orion5x versatile}"
++					case "${LB_DISTRIBUTION}" in
++						wheezy)
++							LB_LINUX_FLAVOURS="${LB_LINUX_FLAVOURS:-iop32x ixp4xx kirkwood orion5x versatile}"
++							;;
++						*)
++							LB_LINUX_FLAVOURS="${LB_LINUX_FLAVOURS:-kirkwood orion5x versatile}"
++							;;
++					esac
  					;;
  			esac
  			;;
@@ -30,7 +38,14 @@ index feebdee..715869c 100755
 -			# therefore we default to all available armel flavours
 -			LB_LINUX_FLAVOURS="${LB_LINUX_FLAVOURS:-mx5 omap}"
 +			# therefore we default to all available armhf flavours
-+			LB_LINUX_FLAVOURS="${LB_LINUX_FLAVOURS:-armmp armmp-lpae}"
++			case "${LB_DISTRIBUTION}" in
++				wheezy)
++					LB_LINUX_FLAVOURS="${LB_LINUX_FLAVOURS:-mx5 omap}"
++					;;
++				*)
++					LB_LINUX_FLAVOURS="${LB_LINUX_FLAVOURS:-armmp armmp-lpae}"
++					;;
++			esac
  			;;
  
  		amd64)
