@@ -9,6 +9,7 @@ live-build (4.0.3-1kali2) kali-dev; urgency=medium
     - fix the #if conditionals
     - accept comments in those files
     - do not fail on empty package lists
+  * Make the armel/armhf patch upstreamable.
 
  -- Sophie Brun <sophie@freexian.com>  Tue, 02 Dec 2014 15:56:49 +0100
 
